# DiTensor

./: .gitignore  CMakeLists.txt  RODEMAP.md
csrc/: #tensor.cpp#  CMakeLists.txt
csrc/kernels/cpu/: add_kernel_cpu.cpp  add_kernel_cpu.cpp~
csrc/kernels/cuda/: add_kernel_cuda.cu
csrc/operator/: #add_operator.cpp#  add_op.cpp~  add_operator.cpp  add_operator.cpp~
include/: tensor.hpp  tensor.hpp~
include/core/: #allocator.hpp#  allocator.hpp  allocator.hpp~  types.hpp  types.hpp~
include/kernel/: add_kernel.hpp  add_kernel.hpp~  kernel.hpp  kernel.hpp~
include/kernel/cpu/: add_kernel_cpu.hpp  add_kernel_cpu.hpp~
include/operator/: add_operator.hpp  add_operator.hpp~  operator.hpp  operator.hpp~
test/: CMakeLists.txt  test_add_cuda.cpp  test_add_cuda.cpp~  test_sanity.cpp  test_tenor.cpp  test_tenor.cpp~
